--- a/eventify/pubspec.yaml
+++ b/eventify/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.2.2
   shared_preferences: ^2.0.15
+  flutter_slidable: ^3.1.1
+  go_router: ^14.3.0
 
 dev_dependencies:
   flutter_test:
