--- a/eventify/pubspec.yaml
+++ b/eventify/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.0.15
   flutter_slidable: ^3.1.1
   go_router: ^14.3.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
