--- a/eventify/pubspec.yaml
+++ b/eventify/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_slidable: ^3.1.1
   go_router: ^14.3.0
   intl: ^0.17.0
+  flutter_speed_dial: ^7.0.0
 
 dev_dependencies:
   flutter_test:
