--- a/eventify/pubspec.yaml
+++ b/eventify/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   go_router: ^14.3.0
   intl: ^0.17.0
   flutter_speed_dial: ^7.0.0
+  pdf: ^3.11.1
+  printing: ^5.11.0
+  path_provider: ^2.0.15
+  flutter_email_sender: ^6.0.3
+  permission_handler: ^10.0.0
 
 dev_dependencies:
   flutter_test:
