--- a/eventify/pubspec.yaml
+++ b/eventify/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   path_provider: ^2.0.15
   flutter_email_sender: ^6.0.3
   permission_handler: ^10.0.0
+  mailer: ^6.0.0
 
 dev_dependencies:
   flutter_test:
